Fix compilation issues due to JDK-11 API leaks (post merge)